--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('/fonts/sf-pro-display.otf') format('opentype');
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'SF Pro Display', Arial, Helvetica, sans-serif;
 }
 
 @layer base {
